corrected profile layout so that it stays consistent in intermediate resolutions and added ellipsis overflow to profile name and description

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -12,7 +12,7 @@
   color: #545454;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 572px) {
   .footer__copyright {
     font-size: 14px;
     line-height: 1.2;
