--- a/blocks/header.css
+++ b/blocks/header.css
@@ -4,7 +4,7 @@
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 572px) {
   .header {
     padding-bottom: 32px;
   }
