--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -18,11 +18,6 @@
   grid-template-columns: minmax(auto, 373px) auto;
   grid-template-areas: "name button" "description description";
   grid-gap: 9px 17px;
-  /*This prevents the layout from breaking if there is too long user input*/
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 415px;
 }
 
 .profile__name {
@@ -32,6 +27,11 @@
   line-height: 1.14;
   font-weight: 500;
   grid-area: name;
+  /*This prevents the layout from breaking if there is too long user input*/
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 415px;
 }
 
 .profile__edit-button {
@@ -58,6 +58,11 @@
   line-height: 1.2;
   font-weight: 400;
   grid-area: description;
+  /*This prevents the layout from breaking if there is too long user input*/
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 415px;
 }
 
 .profile__add-button {
@@ -77,7 +82,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 572px) {
   .profile {
     flex-direction: column;
   }
@@ -114,5 +119,11 @@
   .profile__add-button {
     margin: 0;
     min-width: 282px;
+  }
+}
+
+@media screen and (min-width: 573px) and (max-width: 722px) {
+  .profile__edit-button {
+    margin-right: 20px;
   }
 }
